@@ -56,8 +56,6 @@ public:
 
   bool is_function (void) const { return true; }
 
-  virtual bool is_dynamically_loaded_function (void) const { return false; }
-
   virtual bool is_system_fcn_file (void) const { return false; }
 
   virtual std::string fcn_file_name (void) const { return std::string (); }
